# SQCS23

./: .gitignore  README.md  SQCSim2023.sln
SQCSim-common/: SQCSim-common.vcxproj  SQCSim-common.vcxproj.filters  array2d.h  array3d.h  blockinfo.cpp  blockinfo.h  booster.cpp  booster.h  boostinfo.cpp  boostinfo.h  bullet.cpp  bullet.h  chunk.cpp  chunk.h  define.h  matrix4.h  netprotocol.cpp  netprotocol.h  opensimplex.cpp  opensimplex.h  player.cpp  player.h  transformation.cpp  transformation.h  vector3.h  world.cpp  world.h
SQCSim-srv/: SQCSim-srv.vcxproj  SQCSim-srv.vcxproj.filters  connection.cpp  connection.h  define.h  main.cpp  server.cpp  server.h
SQCSim-srv/cmake/: CMakeLists.txt
SQCSim2021/: audio.cpp  audio.h  connector.cpp  connector.h  define.h  engine.cpp  engine.h  main.cpp  mesh.cpp  mesh.h  openglcontext.cpp  openglcontext.h  remoteplayer.cpp  remoteplayer.h  renderer.cpp  renderer.h  settings.cpp  settings.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  tool.cpp  tool.h  vertexbuffer.cpp  vertexbuffer.h
SQCSim2021/cmake/: CMakeLists.txt
SQCSim2021/media/shaders/: shader01.frag  shader01.vert
